# nq-mcp

./: .gitignore  .jscpd.json  Cargo.toml  README.md  inspector.sh
.github/workflows/: rust.yml  super-linter.yml
src/: main.rs  nature_iq.rs
src/openaq/: client.rs  mod.rs  types.rs
