[package]
name = "nq-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.101"
bon = "3.8.2"
oas3-gen-support = "0.25.1"
reqwest = { version = "0.13.2", features = ["query"] }
chrono = "0.4.43"
http = "1.4.0"
serde_with = "3.16.1"